--- a/frontend/chatbot-sdk/index.html
+++ b/frontend/chatbot-sdk/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chatbot-sdk</title>
+    <title>SDK Local Test</title>
+    <link
+      rel="stylesheet"
+      href="https://vet-chat-bot-liard.vercel.app/vet-chatbot-sdk.css"
+    />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <h1>Hello</h1>
+
+    <!-- Load SDK -->
+    <script src="https://vet-chat-bot-liard.vercel.app/vet-chatbot-sdk.iife.js"></script>
   </body>
 </html>
